src/objects/Community_Access_Request__c.object
<CustomObject>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Community Access Requests</relationshipLabel>
        <relationshipName>Community_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorize_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorize Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCenter_Access_type__c</fullName>
        <label>BillingCenter Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BillingCenter_Support_Group__c</fullName>
        <label>BillingCenter Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Billing System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_Access_type__c</fullName>
        <label>ClaimCenter Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_support_group__c</fullName>
        <label>ClaimCenter Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Claim System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Access Requests</relationshipLabel>
        <relationshipName>Community_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Mailing_Country__r.Name</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Email__c</fullName>
        <defaultValue>$Setup.Access_Request_Community__c.Customer_Support__c</defaultValue>
        <label>Customer Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Data_Management_Access__c</fullName>
        <label>Data Management Access</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Management_Access_type__c</fullName>
        <label>Data Management Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Management_support_group__c</fullName>
        <label>Data Management Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Portals_Access_type__c</fullName>
        <label>Digital Portals Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Portals_support_group__c</fullName>
        <label>Digital Portals Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disable_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp;&quot; &quot;&amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Live_Access_Type__c</fullName>
        <label>GW Live Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GW_Live_Support_Group__c</fullName>
        <label>GW Live Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>GW Live</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Email__c</fullName>
        <defaultValue>$Setup.Access_Request_Community__c.Implementation_Team__c</defaultValue>
        <label>Implementation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Country</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Community Access Requests</relationshipLabel>
        <relationshipName>Community_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing State</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Community Access Requests</relationshipLabel>
        <relationshipName>Community_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <defaultValue>$Setup.Access_Request_Community__c.Partner_Team__c</defaultValue>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_Access_type__c</fullName>
        <label>PolicyCenter Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_support_group__c</fullName>
        <label>PolicyCenter Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Policy System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Predictive_Analytics_Access_Type__c</fullName>
        <label>Predictive Analytics Access Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support (View Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Predictive_Analytics_Support_Group__c</fullName>
        <label>Predictive Analytics Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Access Requests (Requester)</relationshipLabel>
        <relationshipName>Community_Access_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Software_Notification__c</fullName>
        <label>Software Notification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Mailing_State__r.Name</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Group__c</fullName>
        <label>Support Group</label>
        <picklist>
            <picklistValues>
                <fullName>Policy System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GW Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Community Access Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Access_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Create_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CAR-{000000}</displayFormat>
        <label>Community Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Access Requests</pluralLabel>
    <recordTypes>
        <fullName>Disable_Account_Request</fullName>
        <active>true</active>
        <description>This page for Customer and Partner user Requests only to Disable any existing Request.</description>
        <label>Disable Account Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Account_Request</fullName>
        <active>true</active>
        <description>This page for Customer and Partner user Requests only to Create a new Contact/User.</description>
        <label>New Account Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Update_Access_Request</fullName>
        <active>true</active>
        <description>This page for Customer and Partner user Requests only to Update any existing Request.</description>
        <label>Update Access Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Information_for_new_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Contact__c ), OR(ISBLANK( Title__c ), ISBLANK( Email__c ),ISBLANK( Phone__c),ISBLANK( Mailing_State__c ),ISBLANK( Mailing_Country__c ) ))</errorConditionFormula>
        <errorMessage>Please enter a value for Title, Email, Phone, State and Country</errorMessage>
    </validationRules>
</CustomObject>